Remove in SimpleTree cycles in conditions